--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>welcome</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <h1>Headline</h1>
+    
     
 </body>
 </html>
