--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,10 +12,29 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
-    <h1>Welcome to</h1>
-    <h1><span class="ip">Heisenberg</span> world</h1>
-    
-    
+    <section>
+        <div class="fist-half">
+            <p>
+            <h1>welcome To</h1>
+            </p>
+            <h1><span class="open-color">Bang haigenbarg</span>World</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work. That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development Hero.</p>
+            <a class="link" target="_blank" href="https://github.com/Nayem12">Hire me</a>
+
+        </div>
+
+        <div class="second-half">
+            <img class="img-1" src="images/my-bg.png" alt="">
+        </div>
+    </section>
+
+
+
 </body>
+
 </html>
