--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="top-banner">
         <div class="fist-half">
             <p>
             <h1>welcome To</h1>
@@ -30,6 +30,18 @@
 
         <div class="second-half">
             <img class="img-1" src="images/my-bg.png" alt="">
+        </div>
+    </section>
+    <section>
+        <div class="second-half">
+            <img class="img-2" src="images/my-bg2.png" alt="">
+        </div>
+        <div class="width">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="second-links" target="_blank" href="https://www.facebook.com/shanayem/">Know about my-self</a>
         </div>
     </section>
 
