--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img class="img-1" src="images/my-bg.png" alt="">
         </div>
     </section>
-    <section>
+    <section class="bottom-banner">
         <div class="second-half">
             <img class="img-2" src="images/my-bg2.png" alt="">
         </div>
