--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flex-desing">
         <div class="fist-half">
             <p>
             <h1>welcome To</h1>
@@ -32,7 +32,7 @@
             <img class="img-1" src="images/my-bg.png" alt="">
         </div>
     </section>
-    <section class="bottom-banner">
+    <section class="bottom-banner flex-desing">
         <div class="second-half">
             <img class="img-2" src="images/my-bg2.png" alt="">
         </div>
@@ -44,9 +44,35 @@
             <a class="second-links" target="_blank" href="https://www.facebook.com/shanayem/">Know about my-self</a>
         </div>
     </section>
+    <section class="last-design">
+        <h1>experiances</h1><br>
+        <div class="flex-desing">
+            <div class="learner">
+                <h2>Full stack web developer</h2>
+                <h3 class="open-color">2021-Present | Pro Level Developer</h3>
+                <p>
+                    I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.
+                </p>
+            </div>
+            <div class="learner-1">
+                <h2>Baby Web Developer</h2>
+                <h3 class="open-color">2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+
+            </div>
+        </div>
+    </section>
 
 
 
 </body>
+<footer>
+    <p>© Peter Parker 2023, a Programming Hero initiative.</p>
+</footer>
 
 </html>
